add ie8 warning

--- a/index.html
+++ b/index.html
@@ -107,10 +107,15 @@
   
   <!-- IE9 console workaround -->
   <script src="ie9-console-workaround.js"></script>
-  
-
-  
   <!-- Add New Component JS Above -->
+
+  <div id="no-js">
+    La página está cargando, espera un momento por favor. Si tarda mucho, comprueba que tienes javascript activado, prueba con otro navegador web más actualizado, o contacto con nosotros en <a href="mailto:soportevotaciones@podemos.info">soportevotaciones@podemos.info</a>.
+  </div>
+
+  <div id="unsupported-browser">
+    Por motivos de seguridad, nuestro software de votación no tiene soporte de tu navegador. Por favor utiliza otro navegador web más actualizado (si usas Internet Explorer, a partir de la versión 9). Para cualquier duda, puedes contactarnos en <a href="mailto:soportevotaciones@podemos.info">soportevotaciones@podemos.info</a>.
+  </div>
 
   <div>
     <!-- Shown while loading -->
