better flash notifications and make scrolling in mobile show to the end when selection dropdown is shown

--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -106,10 +106,10 @@
     </div>
 
     <!-- next button -->
-    <div class="row affix-bottom">
+    <div class="row affix-bottom text-center">
       <p>
         <span
-          class="text-brand-primary"
+          class="text-brand-warning"
           id="maxSelectedLimitReached"
           ng-i18next="[i18next]({max: election.max})avBooth.maxSelectedLimitReached"
           ng-if="shownWarning === warningEnum.maxSelectedLimitReached">
