minor usability changes on packs

--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -120,6 +120,18 @@
           ng-i18next="avBooth.alreadySelectedDocumentType"
           ng-if="shownWarning === warningEnum.alreadySelectedDocumentType">
         </span>
+        <span
+          class="text-brand-warning"
+          id="alreadySelectedPack"
+          ng-i18next="avBooth.alreadySelectedPack"
+          ng-if="shownWarning === warningEnum.alreadySelectedPack">
+        </span>
+        <span
+          class="text-brand-warning"
+          id="cantSelectPack"
+          ng-i18next="avBooth.cantSelectPack"
+          ng-if="shownWarning === warningEnum.cantSelectPack">
+        </span>
       </p>
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
