adding view text to draftoptions dropdown icon for usability

--- a/avBooth/draft-option-directive/draft-option-directive.html
+++ b/avBooth/draft-option-directive/draft-option-directive.html
@@ -21,6 +21,8 @@
     class="btn btn-default btn-right"
     ng-class="{'in': option.isOpen}"
     ng-click="option.isOpen = !option.isOpen">
+    <span ng-i18next="avBooth.dropdownOptionView">
+    </span>
     <span
       class="glyphicon"
       ng-class="{'glyphicon-chevron-up': option.isOpen, 'glyphicon-chevron-down': !option.isOpen}">
