remove pack label at podemos request

--- a/avBooth/draft-option-directive/draft-option-directive.html
+++ b/avBooth/draft-option-directive/draft-option-directive.html
@@ -7,11 +7,11 @@
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
     </div>
-    <span
+<!--    <span
       class="label label-default"
       ng-i18next="avBooth.packLabel"
       ng-if="option.isPack">
-    </span>
+    </span>-->
     <p
       class="includes visible-xs"
       ng-i18next="[i18next]({includeList: option.includes})avBooth.draftIncludesList"></p>
