hide in small screen glyph-search in filter

--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.html
@@ -65,7 +65,7 @@
               ng-model-options="{debounce: 500}"
               ng-i18next="[placeholder]avBooth.filterOptionsPlaceholder"
               />
-            <span class="glyphicon glyphicon-search"></span>
+            <span class="glyphicon glyphicon-search hidden-xs"></span>
           </div>
         </div>
       </div>
