starting work on pcandidates election screen

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -12,6 +12,8 @@
   </div>
   <div avb-drafts-election-screen ng-if="state == stateEnum.draftsElectionScreen">
   </div>
+  <div avb-pcandidates-election-screen ng-if="state == stateEnum.pcandidatesElectionScreen">
+  </div>
   <div avb-review-screen ng-if="state == stateEnum.reviewScreen">
   </div>
   <div avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
