--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <script src="avBooth/error-screen-directive/error-screen-directive.js" class="app"></script>
   <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
+  <script src="avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.js" class="app"></script>
   <script src="avBooth/review-ballot-directive/review-ballot-directive.js" class="app"></script>
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
