--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -28,27 +28,58 @@
 <div class="content avb-content">
   <div class="container">
     <div class="row">
-    <div class="row">
-      <div class="col-xs-12 col-md-4 col-md-offset-4">
+      <div
+        class="hidden-xs col-md-4 small-selected"
+        ng-class="{dropdown: stateData.selectionDropDown}">
         <div
-          class="filter-input"
-          ng-class="{hidden: stateData.selectionDropDown}">
-            <span class="glyphicon glyphicon-search"></span>
-            <input type="text"
-              id="filter-input"
-              ng-model="stateData.filter"
-              ng-model-options="{debounce: 700}"
-              ng-i18next="[placeholder]avBooth.filterOptionsPlaceholder2"
-              />
+          class="pull-left"
+          ng-click="stateData.selectionDropDown = !stateData.selectionDropDown">
+          <h4 ng-i18next="[i18next]({count: numSelectedOptions()})avBooth.numSelectedOptionsSmall"></h4>
+          <span
+            class="glyphicon glyphicon-play avb-toggle-span">
+          </span>
         </div>
       </div>
-      <div class="col-xs-6 hidden-xs options-title"
+      <div
+        class="col-xs-12 col-md-4 filter-input-wrap">
+        <div
+          class="filter-input"
+          ng-if="!stateData.selectionDropDown">
+          <span class="glyphicon glyphicon-search"></span>
+          <input type="text"
+            id="filter-input"
+            ng-model="stateData.filter"
+            ng-model-options="{debounce: 700}"
+            ng-i18next="[placeholder]avBooth.filterOptionsPlaceholder2"
+            />
+        </div>
+        <div
+          class="visible-xs hidder"
+          ng-if="stateData.selectionDropDown">
+        </div>
+      </div>
+      <div
+        class="visible-xs col-xs-12 small-selected padded"
+        ng-class="{dropdown: stateData.selectionDropDown}">
+        <div
+          class="pull-left"
+          ng-click="stateData.selectionDropDown = !stateData.selectionDropDown">
+          <h4 ng-i18next="[i18next]({count: numSelectedOptions()})avBooth.numSelectedOptionsSmall"></h4>
+          <span
+            class="glyphicon glyphicon-play avb-toggle-span">
+          </span>
+        </div>
+      </div>
+
+      <div
+        class="clearfix"
+        ng-class="{titleSelected: stateData.selectionDropDown}">
+      </div>
+
+      <div class="col-xs-5 hidden-xs options-title"
         av-affix-top-offset="30"
         ng-class="{titleSelected: stateData.selectionDropDown}">
-        <span ng-i18next="avBooth.proposalsTitleClickToSelect"
-        ng-if="!stateData.selectionDropDown"></span>
-        <span ng-i18next="avBooth.proposalsTitleClickToDeselect"
-        ng-if="stateData.selectionDropDown"></span>
+        <span ng-i18next="avBooth.candidatesTitle"></span>
       </div>
       <div class="hidden-xs col-xs-2 affix-docs-header" av-affix-top-offset="30"
         ng-class="{titleSelected: stateData.selectionDropDown}">
