starting work on pcandidates-rows

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -124,6 +124,13 @@
       </div>
     </div>
 
+    <!-- show available options and filter -->
+    <div class="col-xs-12"
+      ng-class="{hidden: stateData.selectionDropDown}">
+      <div avb-pcandidates-rows>
+      </div>
+    </div>
+
     <!-- next button -->
     <div class="row affix-bottom text-center">
       <p>
