--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
   <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
   <script src="avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.js" class="app"></script>
+  <script src="avBooth/pcandidates-rows-directive/pcandidates-rows-directive.js" class="app"></script>
+  <script src="avBooth/pcandidates-row-directive/pcandidates-row-directive.js" class="app"></script>
   <script src="avBooth/review-ballot-directive/review-ballot-directive.js" class="app"></script>
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
