adding avDebounce for angular v12 to have an equivalent to ngmodeloptions debounce

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -50,7 +50,7 @@
           <input type="text"
             id="filter-input"
             ng-model="stateData.filter"
-            ng-model-options="{debounce: 700}"
+            av-debounce="500"
             ng-i18next="[placeholder]avBooth.filterOptionsPlaceholder2"
             />
         </div>
