--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <script src="avUi/affix-top-directive.js" class="app"></script>
   <script src="avUi/collapsing-directive.js" class="app"></script>
   <script src="avUi/recompile-directive.js" class="app"></script>
+  <script src="avUi/debounce-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
