--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.html
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.html
@@ -1,14 +1,27 @@
-<div class="col-xs-12 col-md-5">
-  <div class="team-title">
+<div class="col-xs-12 col-sm-5">
+  <div
+    class="team-title"
+    ng-click="toggleTeam(team)">
     {{team.title}}
   </div>
+  <button
+    class="btn btn-default btn-right"
+    ng-class="{'in': team.isOpen}"
+    ng-click="team.isOpen = !team.isOpen">
+    <span ng-i18next="avBooth.dropdownOptionView">
+    </span>
+    <span
+      class="glyphicon"
+      ng-class="{'glyphicon-chevron-up': team.isOpen, 'glyphicon-chevron-down': !team.isOpen}">
+    </span>
+  </button>
 </div>
-<div class="hidden-xs col-md-2">
+<div class="hidden-xs col-sm-2">
   TODO
 </div>
-<div class="hidden-xs col-md-2">
+<div class="hidden-xs col-sm-2">
   TODO
 </div>
-<div class="hidden-xs col-md-2">
+<div class="hidden-xs col-sm-2">
   TODO
 </div>
