adding pcandidates-cell directive, starting work on it

--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.html
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.html
@@ -16,12 +16,9 @@
     </span>
   </button>
 </div>
-<div class="hidden-xs col-sm-2">
-  TODO
+<div class="hidden-xs col-sm-2" avb-pcandidates-cell="secretario">
 </div>
-<div class="hidden-xs col-sm-2">
-  TODO
+<div class="hidden-xs col-sm-2" avb-pcandidates-cell="consejo">
 </div>
-<div class="hidden-xs col-sm-2">
-  TODO
+<div class="hidden-xs col-sm-2" avb-pcandidates-cell="garantias">
 </div>
