--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -142,6 +142,12 @@
           ng-i18next="[i18next]({max: election.max})avBooth.maxSelectedLimitReached"
           ng-if="shownWarning === warningEnum.maxSelectedLimitReached">
         </span>
+        <span
+          class="text-brand-warning"
+          id="cannotSelectAll"
+          ng-i18next="[i18next]({max: election.max})avBooth.cannotSelectAll"
+          ng-if="shownWarning === warningEnum.cannotSelectAll">
+        </span>
       </p>
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
