--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
   <script src="avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.js" class="app"></script>
   <script src="avBooth/pcandidates-rows-directive/pcandidates-rows-directive.js" class="app"></script>
   <script src="avBooth/pcandidates-row-directive/pcandidates-row-directive.js" class="app"></script>
+  <script src="avBooth/pcandidates-cell-directive/pcandidates-cell-directive.js" class="app"></script>
   <script src="avBooth/review-ballot-directive/review-ballot-directive.js" class="app"></script>
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
@@ -98,6 +99,7 @@
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="avBooth/success-screen-directive/success-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-filter.js" class="app"></script>
+  <script src="avBooth/count-selected-options-filter.js" class="app"></script>
   <script src="avBooth/has-selected-options-filter.js" class="app"></script>
   <script src="test/test.js" class="app"></script>
   <!-- for security, we do not include the dynamic directive in the app,
