--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -83,12 +83,16 @@
       <div class="col-xs-5 hidden-xs options-title"
         ng-class="{titleSelected: stateData.selectionDropDown}">
         <span ng-i18next="avBooth.candidatesTitle"></span>
-        <div class="title-help" ng-i18next="avBooth.helpTextViewSingleCandidates"></div>
+        <div class="title-help important" ng-i18next="avBooth.helpTextViewSingleCandidates"></div>
         <div class="title-help" ng-i18next="avBooth.helpTextViewCell"></div>
       </div>
       <div class="hidden-xs col-xs-2 affix-docs-header"
         ng-class="{titleSelected: stateData.selectionDropDown}">
         Secretaría General
+        <div
+          class="title-help"
+          ng-i18next="[i18next]({selected: numSelectedBySlug('secretario'), count: numTotalBySlug('secretario')})avBooth.totalsQuestionColumn">
+        </div>
         <div
           class="randomize-column"
           ng-class="{hidden: stateData.selectionDropDown}"
@@ -101,6 +105,10 @@
         ng-class="{titleSelected: stateData.selectionDropDown}">
         Consejo Ciudadano
         <div
+          class="title-help"
+          ng-i18next="[i18next]({selected: numSelectedBySlug('consejo'), count: numTotalBySlug('consejo')})avBooth.totalsQuestionColumn">
+        </div>
+        <div
           class="randomize-column"
           ng-class="{hidden: stateData.selectionDropDown}"
           ng-click="randomizeByColumn('consejo')">
@@ -111,6 +119,10 @@
       <div class="hidden-xs col-xs-2 affix-docs-header"
         ng-class="{titleSelected: stateData.selectionDropDown}">
         Comisión de Garantías
+        <div
+          class="title-help"
+          ng-i18next="[i18next]({selected: numSelectedBySlug('garantias'), count: numTotalBySlug('garantias')})avBooth.totalsQuestionColumn">
+        </div>
         <div
           class="randomize-column"
           ng-click="randomizeByColumn('garantias')"
