adding example avRegistration view

--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
   <script src="avBooth/selected-options-filter.js" class="app"></script>
   <script src="avBooth/count-selected-options-filter.js" class="app"></script>
   <script src="avBooth/has-selected-options-filter.js" class="app"></script>
+
+  <!-- registration -->
+  <script src="avRegistration/login-controller/login-controller.js" class="app"></script>
+  <script src="avRegistration/login-directive/login-directive.js" class="app"></script>
+
   <script src="test/test.js" class="app"></script>
+
   <!-- for security, we do not include the dynamic directive in the app,
        so in the compiled app e2e tests are not expected work. -->
   <script src="test/dynamic-directive.js"></script>
