--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <script src="avUi/collapsing-directive.js" class="app"></script>
   <script src="avUi/recompile-directive.js" class="app"></script>
   <script src="avUi/debounce-directive.js" class="app"></script>
+  <script src="avUi/inside-iframe-service.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
