adding extra step in the start screen description, for cast or cancel verification

--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -36,17 +36,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="padded col-xs-12 col-sm-4">
+      <div class="padded col-xs-12 col-sm-3">
         <h3 class="text-brand-success" ng-i18next="avBooth.selectOptionsTitle"></h3>
         <p ng-i18next="avBooth.selectOptionsText"></p>
       </div>
-      <div class="padded col-xs-12 col-sm-4">
+      <div class="padded col-xs-12 col-sm-3">
         <h3 class="text-brand-success" ng-i18next="avBooth.reviewOptionsTitle"></h3>
         <p ng-i18next="avBooth.reviewOptionsText"></p>
       </div>
-      <div class="padded col-xs-12 col-sm-4">
-        <h3 class="text-brand-success" ng-i18next="avBooth.encryptAndEmitBallotTitle"></h3>
-        <p ng-i18next="avBooth.encryptAndEmitBallotText"></p>
+      <div class="padded col-xs-12 col-sm-3">
+        <h3 class="text-brand-success" ng-i18next="avBooth.encryptBallotTitle"></h3>
+        <p ng-i18next="avBooth.encryptBallotText"></p>
+      </div>
+      <div class="padded col-xs-12 col-sm-3">
+        <h3 class="text-brand-success" ng-i18next="avBooth.emitBallotTitle"></h3>
+        <p ng-i18next="avBooth.emitBallotText"></p>
       </div>
     </div>
     <div class="row" ng-if="tosTitle.length > 0">
