splitting CastBallotService into CastBallotService and EncryptBallotService

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <script src="crypto/sjcl-service.js" class="app"></script>
   <script src="crypto/elgamal-service.js" class="app"></script>
   <script src="crypto/encrypt-answer-service.js" class="app"></script>
+  <script src="crypto/encrypt-ballot-service.js" class="app"></script>
   <script src="crypto/hmac-service.js" class="app"></script>
   <script src="crypto/answer-encoder-service.js" class="app"></script>
   <script src="crypto/cast-ballot-service.js" class="app"></script>
@@ -80,6 +81,7 @@
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
+  <script src="avBooth/cast-or-cancel-screen-directive/cast-or-cancel-screen-directive.js" class="app"></script>
   <script src="avBooth/draft-option-directive/draft-option-directive.js" class="app"></script>
   <script src="avBooth/draft-option-cell-directive/draft-option-cell-directive.js" class="app"></script>
   <script src="avBooth/draft-options-directive/draft-options-directive.js" class="app"></script>
