splitting the casting-ballot screen into casting-ballot and encrypting-ballot screen directives

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -18,6 +18,8 @@
   </div>
   <div avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
   </div>
+  <div avb-encrypting-ballot-screen ng-if="state == stateEnum.encryptingBallotScreen">
+  </div>
   <div avb-success-screen ng-if="state == stateEnum.successScreen">
   </div>
 </div>
