--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   <script src="avBooth/draft-option-directive/draft-option-directive.js" class="app"></script>
   <script src="avBooth/draft-option-cell-directive/draft-option-cell-directive.js" class="app"></script>
   <script src="avBooth/draft-options-directive/draft-options-directive.js" class="app"></script>
+  <script src="avBooth/encrypting-ballot-screen-directive/encrypting-ballot-screen-directive.js" class="app"></script>
   <script src="avBooth/simple-option-directive/simple-option-directive.js" class="app"></script>
   <script src="avBooth/simple-selected-option-directive/simple-selected-option-directive.js" class="app"></script>
   <script src="avBooth/drafts-election-screen-directive/drafts-election-screen-directive.js" class="app"></script>
