adding initial screen for cast or cancel

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -14,6 +14,8 @@
   </div>
   <div avb-pcandidates-election-screen ng-if="state == stateEnum.pcandidatesElectionScreen">
   </div>
+  <div avb-cast-or-cancel-screen ng-if="state == stateEnum.castOrCancelScreen">
+  </div>
   <div avb-review-screen ng-if="state == stateEnum.reviewScreen">
   </div>
   <div avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
