--- a/avBooth/review-screen-directive/review-screen-directive.html
+++ b/avBooth/review-screen-directive/review-screen-directive.html
@@ -32,19 +32,21 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p ng-i18next="[html:i18next]({ballotHash: stateData.ballotHash})avBooth.reviewBallotHashText"></p>
         <div avb-review-ballot></div>
       </div>
     </div>
     <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
-      <div class="col-xs-9 no-padding">
+      <div class="col-xs-12">
+        <p ng-i18next="[html:i18next]({ballotHash: stateData.ballotHash})avBooth.reviewBallotHashText"></p>
+      </div>
+      <div class="col-xs-6 col-sm-8 col-md-9 no-padding">
         <button
           class="btn btn-block btn-lg btn-success btn-plain"
           ng-i18next="avBooth.castTheBallot"
           ng-click="next()">
         </button>
       </div>
-      <div class="col-xs-3 no-padding">
+      <div class="col-xs-6 col-sm-4 col-md-3 no-padding">
         <button
           class="btn btn-block btn-lg btn-plain btn-audit"
           ng-i18next="avBooth.auditTheBallot"
