adding audit ballot screen directive

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -16,6 +16,8 @@
   </div>
   <div avb-cast-or-cancel-screen ng-if="state == stateEnum.castOrCancelScreen">
   </div>
+  <div avb-audit-ballot-screen ng-if="state == stateEnum.auditBallotScreen">
+  </div>
   <div avb-review-screen ng-if="state == stateEnum.reviewScreen">
   </div>
   <div avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
