--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <script src="avBooth/accordion-options-directive/accordion-options-directive.js" class="app"></script>
   <script src="avBooth/accordion-selected-option-directive/accordion-selected-option-directive.js" class="app"></script>
   <script src="avBooth/available-options-directive/available-options-directive.js" class="app"></script>
+  <script src="avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.js" class="app"></script>
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
