--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
   <script src="avBooth/count-selected-options-filter.js" class="app"></script>
   <script src="avBooth/has-selected-options-filter.js" class="app"></script>
 
+  <!-- election -->
+  <script src="avElection/init.js" class="app"></script>
+  <script src="avElection/results-controller/results-controller.js" class="app"></script>
+  <script src="avElection/results-directive/results-directive.js" class="app"></script>
+
   <!-- registration -->
+  <script src="avRegistration/init.js" class="app"></script>
   <script src="avRegistration/login-controller/login-controller.js" class="app"></script>
   <script src="avRegistration/login-directive/login-directive.js" class="app"></script>
 
