Added register directive to avRegistration module.

--- a/avRegistration/login-directive/login-directive.html
+++ b/avRegistration/login-directive/login-directive.html
@@ -7,7 +7,7 @@
         <input type="text" class="form-control" id="emailText" ng-i18next="[placeholder]avRegistration.emailPlaceholder" />
         <p class="help-block">
           <span ng-i18next="avRegistration.notRegisteredYet"></span>
-          <a ng-i18next="avRegistration.registerHere" ng-click="registerHere()"></a>
+          <a ng-i18next="avRegistration.registerHere" href="#/register"></a>
         </p>
       </div>
 
