--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
   <script src="avRegistration/init.js" class="app"></script>
   <script src="avRegistration/login-controller/login-controller.js" class="app"></script>
   <script src="avRegistration/login-directive/login-directive.js" class="app"></script>
+  <script src="avRegistration/register-controller/register-controller.js" class="app"></script>
+  <script src="avRegistration/register-directive/register-directive.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
 
