adding simple-error-directive

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <!-- Main App JS -->
   <script src="avUi/avUi.js" class="app"></script>
   <script src="avUi/jquery.flash.js" class="app"></script>
+  <script src="avUi/simple-error-directive/simple-error-directive.js" class="app"></script>
   <script src="avUi/affix-bottom-directive.js" class="app"></script>
   <script src="avUi/affix-top-offset-directive.js" class="app"></script>
   <script src="avUi/affix-top-directive.js" class="app"></script>
